세션 체크 API 권한 수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -280,11 +280,10 @@
                let ssesionStatus = 0
                $.ajax({
                         type:'get',
-                        contentType:'application/json',
                         url:'/api/session/check',
                         success:function(data){
                            ssesionStatus = data;
-                           if(ssesionStatus == 1)
+                           if(ssesionStatus)
                                {
                                 subscribeToNotifications();
                                }
