--- a/src/main/resources/templates/mypagecomment.html
+++ b/src/main/resources/templates/mypagecomment.html
@@ -61,18 +61,18 @@
          </table>
          <div th:if="${endPage != 0}" class="paging_list">
              <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
-             <a class="page_previous" th:classappend=" ${!comment.hasPrevious()} ? 'disabled' " th:href="${!comment.isFirst()} ? @{/mypage(type=comment_list,page=${comment.number})}"> 이전 </a>
+             <a class="page_previous" th:classappend=" ${!pageable.previous} ? 'disabled' " th:href="${!pageable.first} ? @{/mypage(type=comment_list,page=${pageable.number})}"> 이전 </a>
              <!-- 시작페이지 -> 끝 페이지 까지 페이지 출력 -->
              <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
 		    <!-- 현재페이지는 링크 없이 숫자만 -->
-            <span th:if="${page == comment.number + 1}" th:text="${page}"></span>
+            <span th:if="${page == pageable.number + 1}" th:text="${page}"></span>
                  <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
-            <span th:unless="${page == comment.number + 1}">
+            <span th:unless="${page == pageable.number + 1}">
               <a th:href="@{/mypage(type=comment_list,page=${page})}" th:text="${page}"></a>
             </span>
         </span>
              <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
-             <a class="page_next" th:classappend=" ${!comment.hasNext()} ? 'disabled' "  th:href="${comment.isLast()} ? '#' : @{/mypage(type=comment_list,page=${comment.number+2})}"> 다음 </a>
+             <a class="page_next" th:classappend=" ${!pageable.next} ? 'disabled' "  th:href="${pageable.last} ? '#' : @{/mypage(type=comment_list,page=${pageable.number+2})}"> 다음 </a>
          </div>
      </div>
 </th:block>
