--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -70,18 +70,18 @@
         </table>
         <div th:if="${endPage != 0}" class="paging_list">
             <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
-            <a class="page_previous" th:classappend=" ${!notelists.hasPrevious()} ? 'disabled' " th:href="${!notelists.isFirst()} ? @{/note(page=${notelists.getPageable().getPageNumber()})}"> 이전 </a>
+            <a class="page_previous" th:classappend=" ${!pageable.previous} ? 'disabled' " th:href="${!pageable.first} ? @{/note(page=${pageable.number})}"> 이전 </a>
             <!-- 시작페이지 -> 끝 페이지 까지 페이지 출력 -->
             <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
 		    <!-- 현재페이지는 링크 없이 숫자만 -->
-            <span th:if="${page == notelists.getPageable().getPageNumber() + 1}" th:text="${page}"></span>
+            <span th:if="${page == pageable.number + 1}" th:text="${page}"></span>
                 <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
-            <span th:unless="${page == notelists.getPageable().getPageNumber() + 1}">
+            <span th:unless="${page == pageable.number + 1}">
               <a th:href="@{/note,page=${page})}" th:text="${page}"></a>
             </span>
         </span>
             <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
-            <a class="page_next" th:classappend=" ${!notelists.hasNext()} ? 'disabled' "  th:href="${notelists.isLast()} ? '#' : @{/note(page=${notelists.number + 2})}"> 다음 </a>
+            <a class="page_next" th:classappend=" ${!pageable.next} ? 'disabled' "  th:href="${pageable.last} ? '#' : @{/note(page=${pageable.number + 2})}"> 다음 </a>
         </div>
     </div>
     <script th:inline="javascript">
