--- a/src/main/resources/templates/searchindex.html
+++ b/src/main/resources/templates/searchindex.html
@@ -20,7 +20,7 @@
         </select>
     </div>
     <!-- 글 정보 -->
-    <div th:if="${hasResults}" th:each="article : ${article}" class="article">
+    <div th:if="${pageable.hasResult}" th:each="article : ${article}" class="article">
             <!-- 글 제목 링크 -->
         <a th:href="@{/article/detail/{id}(id=${article.id})}">
             <h2 class="overflow-text bold" th:text="${article.title}"></h2></br>
@@ -47,7 +47,7 @@
             </ul>
         </div>
     </div>
-    <div th:unless="${hasResults}" class="article">
+    <div th:unless="${pageable.hasResult}" class="article">
         <p>검색 결과가 없습니다.</p>
     </div>
     <div class="search_header">
@@ -61,18 +61,18 @@
     <!-- 글 페이지 리스트 -->
     <div th:if="${endPage != 0}" class="paging_list">
         <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
-        <a class="page_previous" th:classappend=" ${!article.hasPrevious()} ? 'disabled' " th:href="${!article.isFirst()} ? @{/articles/search(query=${query},sort=${sort},page=${article.number})}"> 이전 </a>
+        <a class="page_previous" th:classappend=" ${!pageable.previous} ? 'disabled' " th:href="${!pageable.first} ? @{/articles/search(query=${query},sort=${sort},page=${pageable.number})}"> 이전 </a>
         <!-- 시작페이지 -> 끝 페이지 까지 페이지 출력 -->
         <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
 		    <!-- 현재페이지는 링크 없이 숫자만 -->
-            <span th:if="${page == article.number + 1}" th:text="${page}"></span>
+            <span th:if="${page == pageable.number + 1}" th:text="${page}"></span>
             <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
-            <span th:unless="${page == article.number + 1}">
+            <span th:unless="${page == pageable.number + 1}">
               <a th:href="@{/(sort=${sort},page=${page})}" th:text="${page}"></a>
             </span>
         </span>
         <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
-        <a class="page_next" th:classappend=" ${!article.hasNext()} ? 'disabled' "  th:href="${article.isLast()} ? '#' : @{/articles/search(query=${query},sort=${sort},page=${article.number+2})}"> 다음 </a>
+        <a class="page_next" th:classappend=" ${!pageable.next} ? 'disabled' "  th:href="${pageable.last} ? '#' : @{/articles/search(query=${query},sort=${sort},page=${pageable.number+2})}"> 다음 </a>
     </div>
     <script th:inline="javascript">
 
@@ -80,6 +80,8 @@
 
             var nowsort = [[${sort}]];
             var nowquery = [[${query}]];
+            var nowsearch = [[${search}]];
+            var nowpage = [[${pageable.number}]] + 1
             if(nowsort != "latest" && nowsort != "newest" && nowsort != "mostrecent")
             {
               $('#sort-select').val("newest");
@@ -89,7 +91,7 @@
             }
             $('#sort-select').change(function() {
                 var sort = $('#sort-select').val();
-               window.location.href = '?sort=' + sort + '&query=' + nowquery;
+               window.location.href = '?sort=' + sort + '&query=' + nowquery + '&search=' + nowsearch + '&page=' + nowpage;
 
             });
             // 엔터 키를 눌렀을 때 검색 실행
