--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,19 +60,25 @@
     </div>
     <!-- 글 페이지 리스트 -->
     <div th:if="${endPage != 0}" class="paging_list">
-        <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
-        <a class="page_previous" th:classappend=" ${!pageable.previous} ? 'disabled' " th:href="${!pageable.first} ? @{/(sort=${sort},page=${pageable.number})}"> 이전 </a>
-        <!-- 시작페이지 -> 끝 페이지 까지 페이지 출력 -->
-        <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
-		    <!-- 현재페이지는 링크 없이 숫자만 -->
-            <span th:if="${page == pageable.number + 1}" th:text="${page}"></span>
-            <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
-            <span th:unless="${page == pageable.number + 1}">
-              <a th:href="@{/(sort=${sort},page=${page})}" th:text="${page}"></a>
+        <ul class="pagination">
+            <li class="page-item">
+                <!-- 이전 링크 있을시 활성화 없을시 비 활성화 -->
+                <a class="page-link" th:classappend=" ${!pageable.previous} ? 'disabled' " th:href="${!pageable.first} ? @{/(sort=${sort},page=${pageable.number})}"> 이전 </a>
+            </li>
+                <!-- 시작페이지 -> 끝 페이지 까지 페이지 출력 -->
+            <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
+                <li class="page-item">
+                    <!-- 현재페이지는 링크 없이 숫자만 -->
+                     <a class="page-link active" th:if="${page == pageable.number + 1}" href="javascript:;" th:text="${page}"></a>
+                    <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
+                     <a class="page-link" th:unless="${page == pageable.number + 1}" th:href="@{/(sort=${sort},page=${page})}" th:text="${page}"></a>
+                </li>
             </span>
-        </span>
-        <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
-        <a class="page_next" th:classappend=" ${!pageable.next} ? 'disabled' "  th:href="${pageable.last} ? '#' : @{/(sort=${sort},page=${pageable.number+2})}"> 다음 </a>
+            <li class="page-item">
+                <!-- 다음 링크 있을시 활성화 없을시 비 활성화 -->
+                <a class="page-link" th:classappend=" ${!pageable.next} ? 'disabled' "  th:href="${pageable.last} ? '#' : @{/(sort=${sort},page=${pageable.number+2})}"> 다음 </a>
+            </li>
+        </ul>
     </div>
 
     <script th:inline="javascript">
