글 삭제 오류 & 알림 리스트 중복 데이터 추가 오류 Update

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -120,6 +120,7 @@
                                    pageNumber = 0;
                                }
                                else {
+                                   $notificationList.empty();
                                    pageNumber = data.number;
                                    pageLast = data.last;
                                    $noFeedList.hide();
