유저프로필과 마이페이지 분리 & 작성자 더보기 창 숨기기 오류 Update

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -52,7 +52,7 @@
                         </a>
                         <div id="my_page" class="list-group" style="position:absolute; display:none;">
                             <ul>
-                                <a th:href="@{/mypage(userid=${#authentication.principal.id},type=article_list)}" class="list-group-item list-group-item-action">
+                                <a th:href="@{/mypage(userid=my,type=article_list)}" class="list-group-item list-group-item-action">
                                    마이페이지
                                 </a>
                                 <a href="/note" class="list-group-item list-group-item-action">
