--- a/src/main/resources/templates/article_detail.html
+++ b/src/main/resources/templates/article_detail.html
@@ -39,10 +39,10 @@
         <span class="article_addtext" th:text="${article.viewcount}"></span></br>
         <div class="list-group" style="position:absolute; display:none; margin-top:10px" id="noteSend_Window">
             <ul>
-                <a th:href="@{/mypage(userid=${article.member.id},type=article_list)}" class="list-group-item list-group-item-action">
+                <a th:href="@{/profilepage(userid=${article.member.id},type=article_list)}" class="list-group-item list-group-item-action">
                     프로필
                 </a>
-                <li>
+                <li sec:authorize="isAuthenticated()">
                     <a href="javascript:;" class="list-group-item list-group-item-action" id="open-message-btn">쪽지 보내기</a>
                 </li>
             </ul>
@@ -225,15 +225,17 @@
                    });
 
 
-                      $('#article_addtext_writer').click(function() {
+                     $('#article_addtext_writer').click(function() {
                         $('#noteSend_Window').show()
                      });
+
                      $(document).click(function(event) {
-                      if (!$('#noteSend_Window').has(event.target) && !$('#article_addtext_writer').is(event.target)) {
+                            if (!$('#noteSend_Window').has(event.target).length && !$('#article_addtext_writer').is(event.target)) {
                            $('#noteSend_Window').hide();
-                       }
+                            }
                      });
-                             $('#open-message-btn').click(function() {
+
+                     $('#open-message-btn').click(function() {
                           window.open('/sendnote?id=' + [[${article.member.email}]], '쪽지 보내기', 'width=400,height=420');
                      });
                    });
