--- a/src/main/resources/templates/mypage_bookmark.html
+++ b/src/main/resources/templates/mypage_bookmark.html
@@ -18,15 +18,15 @@
              <div style="border-top:1px solid black; border-top-width:1px;">
                  <ul class="nav nav-tabs" style="padding:20px">
                      <li class="nav-item">
-                         <a class="nav-link" aria-current="page" th:href="@{/mypage(userid=${user.id},type=article_list)}">작성한 글</a>
+                         <a class="nav-link" aria-current="page" th:href="@{/mypage(type=article_list)}">작성한 글</a>
                      </li>
                      <li class="nav-item">
-                         <a class="nav-link" th:href="@{/mypage(userid=${user.id},type=comment_list)}" >작성한 댓글</a>
+                         <a class="nav-link" th:href="@{/mypage(type=comment_list)}" >작성한 댓글</a>
                      </li>
-                     <li class="nav-item" th:if="${user.id == @authenticationUtil.getCurrentMember()?.id}">
+                     <li class="nav-item">
                          <a class="nav-link active" href="/mypage?type=bookmark_list">즐겨찾기</a>
                      </li>
-                     <li class="nav-item" th:if="${user.id == @authenticationUtil.getCurrentMember()?.id}">
+                     <li class="nav-item">
                          <a class="nav-link" href="/mypage?type=edit_profile">내 정보 수정</a>
                      </li>
                  </ul>
